Remove test background

--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -1,6 +1,16 @@
 body {
-  .logo {
-    width: 100px;
-  }
-    background-color: red;
+
+}
+
+// Global text styling
+p, 
+span, 
+div, 
+li, 
+a, 
+label, 
+input, 
+textarea, 
+button {
+  font-family: 'STK Bureau Sans', sans-serif;
 }
