--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -18,6 +18,18 @@ button {
 // Youtube Player
 
 .player {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* This maintains 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
   .ytp-chrome-top,           /* Hides the top bar with title */
   .ytp-chrome-bottom,        /* Hides the bottom control bar */
   .ytp-watermark,           /* Hides YouTube logo */
