--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -28,8 +28,10 @@ button {
     height: 100%;
     border: none;
   }
+}
 
-  // Hide YouTube UI elements
+// Hide ALL YouTube UI elements
+iframe[data-video-id] {
   .ytp-chrome-top,
   .ytp-chrome-bottom,
   .ytp-gradient-top,
@@ -38,7 +40,27 @@ button {
   .ytp-large-play-button,
   .ytp-youtube-button,
   .ytp-watch-later-button,
-  .ytp-share-button {
+  .ytp-share-button,
+  .ytp-title,
+  .ytp-show-cards-title,
+  .ytp-cards-button,
+  .ytp-pause-overlay,
+  .ytp-menuitem,
+  .ytp-ce-element {
     display: none !important;
+    opacity: 0 !important;
+    visibility: hidden !important;
   }
+}
+
+// Additional overlay to prevent hover interactions
+.player::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  pointer-events: none;
 }
