--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -11,6 +11,11 @@ button {
   font-family: 'STK Bureau Sans', sans-serif;
 }
 
+w-nav-link w--current {
+  color: var(--_color---text);
+  opacity: .75;
+}
+
 // YouTube player container
 .player {
   position: relative;
