--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -11,7 +11,7 @@ button {
   font-family: 'STK Bureau Sans', sans-serif;
 }
 
-w-nav-link.w--current {
+.w-nav-link.w--current {
   color: var(--_color---text);
   opacity: .75;
 }
