--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -96,3 +96,17 @@ iframe {
   pointer-events: none;
 }
 
+.weather-symbol-svg {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%);
+  fill: #000000;
+  stroke: #000000;
+
+  path,
+  circle,
+  rect {
+    fill: #000000;
+    stroke: #000000;
+  }
+}
