--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -100,13 +100,13 @@ iframe {
   width: 100%;
   height: 100%;
   filter: grayscale(100%);
-  fill: #000000;
   stroke: #000000;
 
   path,
   circle,
   rect {
-    fill: #000000;
+    fill: transparent;
     stroke: #000000;
+    stroke-width: 1px;  // Adjust this value if needed
   }
 }
