--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -56,6 +56,13 @@ body {
       pointer-events: none; /* Prevents hover interactions */
     }
   }
+
+  &.story {
+    .player-wrapper {
+      height: 100% !important;
+      padding-bottom: 0 !important;
+    }
+  }
 }
 
 // Hide ALL YouTube UI elements
