--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -129,8 +129,9 @@ iframe {
   content: "● ";
 }
 
-.w-tab-link {
+.w-tab-link, .w-tab-link.w--current {
   background: var(--color-primitives--røsslyng-15);
+  transition: background 0.3s ease-in-out;
   &:hover {
     background: var(--color-primitives--røsslyng-40);
   }
