--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -102,6 +102,7 @@ iframe {
 .w-richtext figure.w-richtext-figure-type-video, .w-richtext figure[data-rt-type="video"] {
   width: 100%;
   height: auto;
+  max-width: 100%;
 }
 
 
