--- a/src/scss/bortelaget-style.scss
+++ b/src/scss/bortelaget-style.scss
@@ -101,8 +101,9 @@ iframe {
 
 .w-richtext figure.w-richtext-figure-type-video, .w-richtext figure[data-rt-type="video"] {
   width: 100%;
-  height: auto;
+  height: auto !important;
   max-width: 100%;
+  aspect-ratio: 16/9;
 }
 
 
